Downgrade java version